Fixed Spacing?

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav{
 }
 .headshot{
   height: 100px;
-  padding: 2px 10px;
+  padding: 2px 20px;
 }
 .icon-bar{
   background: darkorange;
